--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-tooltip": "^5.26.4",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
